# http-webchat

./: .gitignore  CMakeLists.txt  Makefile  application.cpp  application.h  chat.css  chat.js  common.cpp  common.h  index.html  main.cpp  poller.cpp  poller.h  resource.cpp  resource.h
ChatServer/: chat_server.cpp  chat_server.h  chatserver.cpp  chatserver.h  json.cpp  json.h
HTTP/: http_common.cpp  http_common.h  http_message.cpp  http_message.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h  route_matcher.cpp  route_matcher.h
HTTP-ProxyServer/: Http-ProxyServer  Makefile  application.cpp  main.cpp
HTTP-ProxyServer/TCP-socket/: tcpserversocket.cpp  tcpserversocket.h
Http/: httpclient.cpp  httpobject.cpp  httprequest.cpp  httpresponse.h  httpserver.cpp  httpserver.h
Http-ProxyServer/: Http-ProxyServer  Http-ProxyServer.pro  Makefile  application.cpp  application.h  epoll.txt  hel  index.html  main.cpp  output.txt
Http-ProxyServer/ChatServer/: chatserver.cpp  chatserver.h
Http-ProxyServer/Http/: httpclient.cpp  httpclient.h  httpobject.cpp  httpobject.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  httpserver.cpp  httpserver.h  httputils.cpp  httputils.h  routematcher.cpp  routematcher.h
Http-ProxyServer/TCP-socket/: main.cpp  tcpserversocket.cpp  tcpserversocket.h  tcpsocket.cpp  tcpsocket.h
Http-ProxyServer/Widgets/: chatwidget.cpp  chatwidget.h
Resources/: chat.js
TCP-socket/: tcpserversocket.cpp  tcpserversocket.h  tcpsocket.cpp
TCPSocket/: tcp_accept_socket.cpp  tcp_accept_socket.h  tcp_server_socket.cpp  tcp_server_socket.h  tcp_socket.cpp  tcp_socket.h
client-js/: haproxy.cfg  index.html  script.js  start
